--- a/detectors/ink-version/Cargo.toml
+++ b/detectors/ink-version/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f16bfa478f131b2ec2ad9742f88dc6a9beea52b7" }
 dylint_linting = "2.1.5"
 if_chain = "1.0.2"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
@@ -15,7 +14,7 @@ semver = "1.0.4"
 serde_json = "1.0"
 toml = "0.7.6"
 
-scout-audit-internal = { path = "../../scout-audit-internal", features = ["detector"] }
+scout-audit-internal = { path = "../../scout-audit-internal", features = ["detector", "lint_helper"] }
 
 [dev-dependencies]
 dylint_testing = "2.1.5"
