--- a/scout-audit-internal/Cargo.toml
+++ b/scout-audit-internal/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [features]
 detector = ["dep:strum"]
-lint_helper = ["dep:serde_json", "dep:clippy_utils"]
+lint_helper = [ "dep:clippy_utils"]
 
 [dependencies]
 strum = { version = "0.25", features = ["derive"], optional = true }
-serde_json = {version = "1.0", optional = true}
-clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "1480cea393d0cee195e59949eabdfbcf1230f7f9", optional = true}
+serde_json = {version = "1.0"}
+clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f16bfa478f131b2ec2ad9742f88dc6a9beea52b7", optional = true}
 dylint_linting = "2.1.5"
