--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -56,6 +56,7 @@ jobs:
           path: |
             ~/.cargo
             apps/cargo-scout-audit/target
+            detectors/target
           key: ${{ runner.os }}-cargo-scout-dependencies-${{ github.run_id }}
 
       - name: Install Rust nightly-2023-04-23
@@ -67,6 +68,10 @@ jobs:
       - name: Compile cargo-scout-audit tests
         working-directory: apps/cargo-scout-audit
         run: cargo test --no-run
+
+      - name: Compile detectors
+        working-directory: detectors
+        run: cargo build --release
 
   test:
     name: Test
@@ -112,6 +117,7 @@ jobs:
           path: |
             ~/.cargo
             apps/cargo-scout-audit/target
+            detectors/target
           key: ${{ runner.os }}-cargo-scout-dependencies-${{ github.run_id  }}
           fail-on-cache-miss: true
 
