--- a/detectors/ink-version/Cargo.toml
+++ b/detectors/ink-version/Cargo.toml
@@ -10,10 +10,10 @@ crate-type = ["cdylib"]
 clippy_utils = { workspace = true }
 dylint_linting = { workspace = true }
 if_chain = { workspace = true }
-reqwest = { version = "0.11", features = ["blocking", "json"] }
 semver = "1.0.4"
 serde_json = "1.0"
 toml = "0.7.6"
+ureq = { version = "2.7.1", features = ["json"] }
 
 scout-audit-internal = { workspace = true }
 
