--- a/detectors/Cargo.toml
+++ b/detectors/Cargo.toml
@@ -8,4 +8,4 @@ dylint_linting = "2.1.5"
 dylint_testing = "2.1.5"
 if_chain = "1.0.2"
 
-scout-audit-internal = { path = "../scout-audit-internal", features = ["detector"] }
+scout-audit-internal = { path = "../scout-audit-internal", features = ["detector", "lint_helper"] }
