--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login to crates.io
-        run: echo ${{ secrets.CRATES_TOKEN }} | cargo login
+      # - name: Login to crates.io
+      #   run: echo ${{ secrets.CRATES_TOKEN }} | cargo login
 
-      - name: Publish to crates.io
-        run: python scripts/publish-to-crates-io.py
+      # - name: Publish to crates.io
+      #   run: python scripts/publish-to-crates-io.py
 
       - name: Create release notes
         run: sed -n "/^## ${{ github.ref_name }}/,/^## v/{ /## v/d; p; }" CHANGELOG.md | awk 'NF {print $0}' | tee body.md
