--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,3 +33,36 @@ jobs:
           draft: false
           prerelease: ${{ contains(github.ref, 'pre') || contains(github.ref, 'rc') }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  upload-binaries:
+    strategy:
+      matrix:
+        os:
+            - ubuntu-latest
+            - macos-latest
+            - windows-latest
+    runs-on: ${{ matrix.os }}
+    needs: release
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Build binaries
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --release
+
+      - name: Rename binary
+        run: mv target/release/scout-audit scout-audit-${{ github.ref_name }}-${{ matrix.os }}
+
+      - name: Upload binaries
+      - uses: taiki-e/upload-rust-binary-action@v1
+        bin: scout-audit-${{ github.ref_name }}-${{ matrix.os }}
+        tar: unix
+        zip: windows
+        token: ${{ secrets.GITHUB_TOKEN }}
