--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
           override: true
 
       - name: Build binaries
-        run: cargo build --release
+        run: cd apps/cargo-scout-audit && cargo build --release
 
       - name: Rename binary
         run: mv target/release/scout-audit scout-audit-${{ github.ref_name }}-${{ matrix.os }}
