--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,13 +53,14 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Build binaries
-        run: cd apps/cargo-scout-audit && cargo build --release
+      # - name: Build binaries
+      #   run: cd apps/cargo-scout-audit && cargo build --release
 
-      - name: Rename binary
-        run: mv apps/cargo-scout-audit/target/release/cargo-scout-audit scout-audit-${{ github.ref_name }}-${{ matrix.os }}
+      # - name: Rename binary
+      #  run: mv apps/cargo-scout-audit/target/release/cargo-scout-audit scout-audit-${{ github.ref_name }}-${{ matrix.os }}
 
       - name: Publish binary
+        run: cd apps/cargo-scout-audit
         uses: taiki-e/upload-rust-binary-action@v1
         with:
           bin: scout-audit-${{ github.ref_name }}-${{ matrix.os }}
