Only taiki binary action w/manifest

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
         run: cd apps/cargo-scout-audit
         uses: taiki-e/upload-rust-binary-action@v1
         with:
+          manifest_path: apps/cargo-scout-audit/Cargo.toml
           bin: scout-audit-${{ github.ref_name }}-${{ matrix.os }}
           tar: unix
           zip: windows
