--- a/apps/cargo-scout-audit/Cargo.toml
+++ b/apps/cargo-scout-audit/Cargo.toml
@@ -34,6 +34,7 @@ cargo_metadata = "0.17"
 clap = { version = "4.3.0", features = ["derive"] }
 dylint = { version = "2.3.0"}
 env_logger = "0.10"
+home = { version = "0.5.5" }
 itertools = "0.11"
 log = "0.4"
 tempfile = "3.8"
