--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -24,7 +24,13 @@ env:
 jobs:
   check-config:
     name: Check config
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -44,7 +50,13 @@ jobs:
   build:
     name: Build
     needs: check-config
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -76,10 +88,13 @@ jobs:
 
   test:
     name: Test
-    runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         test:
           [
             "assert-violation",
@@ -107,6 +122,7 @@ jobs:
             "unused-return-enum",
             "zero-or-test-address",
           ]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
