Fix release commas

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
           - { o: ubuntu-latest,  t: x86_64-unknown-linux-gnu                         }
           - { o: ubuntu-latest,  t: aarch64-unknown-linux-gnu                        }
           - { o: ubuntu-latest,  t: x86_64-unknown-linux-musl                        }
-          - { o: ubuntu-latest,  t: aarch64-unknown-linux-musl,                      }
-          - { o: windows-latest, t: x86_64-pc-windows-msvc,                          }
+          - { o: ubuntu-latest,  t: aarch64-unknown-linux-musl                       }
+          - { o: windows-latest, t: x86_64-pc-windows-msvc                           }
           - { o: windows-latest, t: aarch64-pc-windows-msvc                          }
     name: ${{ matrix.t }}
     runs-on: ${{ matrix.o }}
