--- a/scout-audit-internal/Cargo.toml
+++ b/scout-audit-internal/Cargo.toml
@@ -30,3 +30,4 @@ lint_helper = [
 strum = { version = "0.25", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 scout-audit-clippy-utils = { version = "=0.2.2", path = "../scout-audit-clippy-utils", optional = true }
+serde = { version = "1.0.197", features = ["derive"] }
