--- a/scout-audit-clippy-utils/Cargo.toml
+++ b/scout-audit-clippy-utils/Cargo.toml
@@ -11,7 +11,7 @@ arrayvec = { version = "0.7", default-features = false }
 if_chain = "1.0"
 itertools = "0.10.1"
 rustc-semver = "1.1"
-clippy_config = { path = "/home/flerena/coinfabrik/scout/rust-clippy/clippy_config" }
+clippy_config = { path = "../clippy_config" }
 
 [features]
 deny-warnings = []
