--- a/apps/cargo-scout-audit/Cargo.toml
+++ b/apps/cargo-scout-audit/Cargo.toml
@@ -44,7 +44,7 @@ serde_json = "1.0"
 
 tarpc = { version = "0.34", features = ["full"] }
 tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
-
+futures = { version = "0.3.30"}
 
 
 scout-audit-internal = { version = "=0.2.2", path = "../../scout-audit-internal", features = ["detector"] }
