scout-audit-clippy-utils and scout-audit-clippy-utils moved and imported from scout-audit repo (WIP path imports)

--- a/detectors/Cargo.toml
+++ b/detectors/Cargo.toml
@@ -3,9 +3,9 @@ members = ["*"]
 exclude = [".cargo", "target"]
 
 [workspace.dependencies]
-dylint_linting = "2.1.5"
 dylint_testing = "2.1.5"
 if_chain = "1.0.2"
 
-scout-audit-clippy-utils = { version = "=0.2.2", path = "../scout-audit-clippy-utils" }
-scout-audit-internal = { path = "../scout-audit-internal", features = ["detector", "lint_helper"] }
+scout-audit-clippy-utils = { version = "=0.2.2", path = "../../scout-audit/scout-audit-clippy-utils" }
+scout-audit-internal = { path = "../../scout-audit/scout-audit-internal", features = ["detector", "lint_helper"] }
+dylint_linting = { package = "scout-audit-dylint-linting", path = "../../scout-audit/scout-audit-dylint-linting" }
