--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -100,6 +100,7 @@ jobs:
             "assert-violation",
             "avoid-core-mem-forget",
             "avoid-format-string",
+            "avoid-autokey-upgradable",
             "delegate-call",
             "divide-before-multiply",
             "dos-unbounded-operation",
