--- a/detectors/unused-return-enum/Cargo.toml
+++ b/detectors/unused-return-enum/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+scout-audit-clippy-utils = { workspace = true }
 dylint_linting = { workspace = true }
 if_chain = { workspace = true }
 
-scout-audit-internal = { workspace = true }
 
 [dev-dependencies]
 dylint_testing = { workspace = true }
