--- a/detectors/Cargo.toml
+++ b/detectors/Cargo.toml
@@ -9,3 +9,4 @@ if_chain = "1.0.2"
 scout-audit-clippy-utils = { version = "=0.2.3" }
 scout-audit-internal = { version = "=0.2.3", features = ["detector", "lint_helper"] }
 dylint_linting = { version = "=2.6.1", package = "scout-audit-dylint-linting"}
+itertools = { version = "0.10" }
