Avoid autokey upgradable detector and test case, completed!

--- a/test-cases/avoid-autokey-upgradable/avoid-autokey-upgradable-1/remediated-example/Cargo.toml
+++ b/test-cases/avoid-autokey-upgradable/avoid-autokey-upgradable-1/remediated-example/Cargo.toml
@@ -30,3 +30,9 @@ overflow-checks = false
 
 [profile.dev]
 overflow-checks = false
+
+[workspace.metadata.dylint]
+libraries = [
+ 
+   { path = "/home/flerena/coinfabrik/scout/scout/detectors/avoid-autokey-upgradable"},
+]
