--- a/.github/workflows/general-rust.yml
+++ b/.github/workflows/general-rust.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Install clippy
         run: rustup component add clippy --toolchain nightly-2023-12-16
 
+      - name: Default to nightly
+        run: rustup default nightly-2023-12-16
+
       - name: Lint with Clippy
         run: python scripts/run-clippy.py --dir test-cases detectors
 
