--- a/test-cases/incorrect-exponentiation/incorrect-exponentiation-1/remediated-example/Cargo.toml
+++ b/test-cases/incorrect-exponentiation/incorrect-exponentiation-1/remediated-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dont-use-float"
+name = "incorrect-exponentiation"
 version = "0.1.0"
 edition = "2021"
 authors = ["[your_name] <[your_email]>"]
@@ -24,3 +24,15 @@ scale-info = { version = "2.6", default-features = false, features = ["derive"],
 
 [dev-dependencies]
 ink_e2e = { version = "5" }
+
+[profile.dev]
+overflow-checks = false
+
+[profile.release]
+overflow-checks = false
+
+[workspace.metadata.dylint]
+libraries = [
+
+   { path = "/home/cami/Desktop/coinfabrik/scout/detectors/incorrect-exponentiation"},
+]
