--- a/test-cases/unprotected-self-destruct/unprotected-self-destruct-1/remediated-example/Cargo.toml
+++ b/test-cases/unprotected-self-destruct/unprotected-self-destruct-1/remediated-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unprotected-self-destruct"
+name = "unprotected-self-destruct-remediated"
 version = "0.1.0"
 edition = "2021"
 authors = ["[your_name] <[your_email]>"]
@@ -17,10 +17,12 @@ std = [
 ink-as-dependency = []
 e2e-tests = []
 
+
 [dependencies]
-ink = { version = "5.0.0", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
+
 
 [dev-dependencies]
-ink_e2e = "=5.0.0"
+ink_e2e = { workspace = true }
