--- a/test-cases/avoid-unsafe-block/avoid-unsafe-block-1/remediated-example/Cargo.toml
+++ b/test-cases/avoid-unsafe-block/avoid-unsafe-block-1/remediated-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "avoid-unsafe-block"
+name = "avoid-unsafe-block-remediated"
 version = "0.1.0"
 authors = ["[your_name] <[your_email]>"]
 edition = "2021"
@@ -18,12 +18,12 @@ ink-as-dependency = []
 e2e-tests = []
 
 [dependencies]
-ink = { version = "5", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
 
 [dev-dependencies]
-ink_e2e = "5"
+ink_e2e = { workspace = true }
 
 [profile.release]
 overflow-checks = false
