workspace add for testcase

--- a/test-cases/incorrect-exponentiation/incorrect-exponentiation-1/remediated-example/Cargo.toml
+++ b/test-cases/incorrect-exponentiation/incorrect-exponentiation-1/remediated-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "incorrect-exponentiation"
+name = "incorrect-exponentiation-remediated"
 version = "0.1.0"
 edition = "2021"
 authors = ["[your_name] <[your_email]>"]
@@ -17,13 +17,14 @@ std = [
 ink-as-dependency = []
 e2e-tests = []
 
+
 [dependencies]
-ink = { version = "5", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
 
 [dev-dependencies]
-ink_e2e = { version = "5" }
+ink_e2e = { workspace = true }
 
 [profile.dev]
 overflow-checks = false
