--- a/test-cases/lazy-values-not-set/lazy-values-not-set-1/remediated-example/Cargo.toml
+++ b/test-cases/lazy-values-not-set/lazy-values-not-set-1/remediated-example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lazy-values-not-set"
+name = "lazy-values-not-set-remediated"
 version = "0.1.0"
 edition = "2021"
 authors = ["[your_name] <[your_email]>"]
@@ -18,11 +18,11 @@ ink-as-dependency = []
 e2e-tests = []
 
 [dependencies]
-ink = { version = "4.2.1", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
+ink = { workspace = true }
+scale = { workspace = true }
+scale-info = { workspace = true }
 
 [dev-dependencies]
-ink_e2e = "4.2.1"
+ink_e2e = { workspace = true }
 
 
