--- a/detectors/Cargo.toml
+++ b/detectors/Cargo.toml
@@ -7,6 +7,6 @@ dylint_testing = "3.0.0"
 if_chain = "1.0.2"
 
 scout-audit-clippy-utils = { version = "=0.2.3" }
-
-itertools = { version = "0.12" }
+scout-audit-internal = { version = "=0.2.3", features = ["detector", "lint_helper"] }
 dylint_linting = { package = "scout-audit-dylint-linting", version = "3.0.1" }
+itertools = { version = "0.12" }
