commented macos workflow, the runner is broken from github side

--- a/.github/workflows/test-detectors.yml
+++ b/.github/workflows/test-detectors.yml
@@ -45,7 +45,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
+    #          - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
@@ -100,7 +100,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
+        #          - macos-latest
         detector: ${{fromJson(needs.prepare-detector-matrix.outputs.matrix)}}
     runs-on: ${{ matrix.os }}
     outputs:
@@ -137,10 +137,10 @@ jobs:
         working-directory: build-status-ubuntu-latest
         run: echo "status=$(cat status-ubuntu-latest.txt)" >> $GITHUB_OUTPUT
 
-      - name: Read macOS build status
-        id: macos_status
-        working-directory: build-status-macos-latest
-        run: echo "status=$(cat status-macos-latest.txt)" >> $GITHUB_OUTPUT
+      #      - name: Read macOS build status
+      #        id: macos_status
+      #        working-directory: build-status-macos-latest
+      #        run: echo "status=$(cat status-macos-latest.txt)" >> $GITHUB_OUTPUT
 
       - name: Find comment
         id: find_comment
@@ -163,7 +163,8 @@ jobs:
             |-------------------------|--------|
             | Detector Validation     | ${{ (needs.validate-detectors.outputs.status == 'success' && '✅ Successful') || '❌ Failed' }} |
             | Build on Ubuntu         | ${{ (steps.ubuntu_status.outputs.status == 'success' && '✅ Successful') || '❌ Failed' }} |
-            | Build on macOS          | ${{ (steps.macos_status.outputs.status == 'success' && '✅ Successful') || '❌ Failed' }} |
             | Tests Execution         | ${{ (needs.test.outputs.status == 'success' && '✅ Successful') || '❌ Failed' }} |
 
             The workflow has completed. Great job! 🚀
+
+#            | Build on macOS          | ${{ (steps.macos_status.outputs.status == 'success' && '✅ Successful') || '❌ Failed' }} |
