Pin clippy_utils and dylint-linting

--- a/detectors/Cargo.toml
+++ b/detectors/Cargo.toml
@@ -1,12 +1,9 @@
 [workspace]
-members = ["*"]
 exclude = [".cargo", "target"]
+members = ["*"]
 
 [workspace.dependencies]
-dylint_testing = "3.0.0"
-if_chain = "1.0.2"
-
-scout-audit-clippy-utils = { version = "=0.2.3" }
-scout-audit-internal = { version = "=0.2.3", features = ["detector", "lint_helper"] }
-dylint_linting = { package = "scout-audit-dylint-linting", version = "3.0.1" }
-itertools = { version = "0.12" }
+clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "99c7838" }
+if_chain = "=1.0.2"
+itertools = { version = "=0.13" }
+scout-audit-dylint-linting = { git = "https://github.com/CoinFabrik/scout-audit", rev = "e03ede4" }
