--- a/detectors/divide-before-multiply/Cargo.toml
+++ b/detectors/divide-before-multiply/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
+edition = "2021"
 name = "divide-before-multiply"
 version = "0.1.0"
-edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-dylint_linting = { workspace = true }
 if_chain = { workspace = true }
+scout-audit-dylint-linting = { workspace = true }
 
-scout-audit-clippy-utils = { workspace = true }
-
-[dev-dependencies]
-dylint_testing = { workspace = true }
+clippy_utils = { workspace = true }
 
 [package.metadata.rust-analyzer]
 rustc_private = true
