--- a/detectors/ink-version/Cargo.toml
+++ b/detectors/ink-version/Cargo.toml
@@ -1,23 +1,19 @@
 [package]
+edition = "2021"
 name = "ink-version"
 version = "0.1.0"
-edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
-scout-audit-clippy-utils = { workspace = true }
-dylint_linting = { workspace = true }
+clippy_utils = { workspace = true }
 if_chain = { workspace = true }
+scout-audit-dylint-linting = { workspace = true }
 semver = "1.0.4"
 serde_json = "1.0"
 toml = "0.7.6"
 ureq = { version = "2.7.1", features = ["json"] }
-
-
-[dev-dependencies]
-dylint_testing = { workspace = true }
 
 [package.metadata.rust-analyzer]
 rustc_private = true
